--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "rollup": "^4.34.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
